# mischief

./: .gitignore  LICENSE  pyproject.toml  readme.md  setup.py
mischief/: __init__.py  pwned.py
