[tool.poetry]
name = "mischief"
version = "0.1.0"
description = "Another interface to haveibeenpwned.com"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/mischief/"
repository = 'http://github.com/AllGloryToTheHypnotoad/mischief'
# documentation = "http://..."
keywords = ['hibp', 'pwn', 'pwned', 'haveibeenpwned']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

[tool.poetry.scripts]
pymischief = "mischief.bin.pymischief:main"

[tool.poetry.dependencies]
python = ">=3.6"
requests = "*"
colorama = "*"
importlib-metadata = {version="*", python="<3.8"}

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
